# gRPC-example

./: .clang-format  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/api/: CMakeLists.txt
lib/api/grpc-api/: CMakeLists.txt
lib/api/grpc-api/include/grpc-api/: GrpcAPI.h
lib/api/grpc-api/src/: GrpcAPI.cpp
lib/api/include/api/: GrpcAPI.h
lib/api/resource/: main.proto
lib/api/src/: CMakeLists.txt  GrpcAPI.cpp  ServerGRPC.cpp  ServerGRPC.h  generate.sh  main.grpc.pb.cc  main.grpc.pb.h  main.pb.cc  main.pb.h
lib/api/test/: CMakeLists.txt  MockStorageManager.cpp  MockStorageManager.h  TestClient.cpp  TestClient.h  main.cpp
lib/api/test/grpc-api/: CMakeLists.txt
lib/storage/: CMakeLists.txt
lib/storage/include/storage/: DTOs.h  IStorageManager.h
lib/storage/src/: CMakeLists.txt  IStorageManager.cpp
lib/storage/src/json-manager/: CMakeLists.txt  JsonStorageManager.cpp  JsonStorageManager.h
lib/storage/src/postgres-manager/: CMakeLists.txt  PostgresStorageManager.cpp  PostgresStorageManager.h
lib/storage/src/sqlite-manager/: CMakeLists.txt  SqliteStorageManager.cpp  SqliteStorageManager.h
lib/storage/test/: CMakeLists.txt
